Create CSV file which contains Category and Description

--- a/Hamshahri_News_Classification.ipynb
+++ b/Hamshahri_News_Classification.ipynb
@@ -6,7 +6,7 @@
       "name": "Hamshahri_News_Classification.ipynb",
       "provenance": [],
       "mount_file_id": "1TM1iZL94eOcZCKLH9L14yfHSFHoxd-Fe",
-      "authorship_tag": "ABX9TyP56MeVt2MHyuygTh6ineTe",
+      "authorship_tag": "ABX9TyMrwHOp5+wOCOjHw7XaRuTK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -186,12 +186,22 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "import csv\n",
+        "\n",
+        "header = ['Category','Description']\n",
+        "with open('/content/train.csv','w',encoding = 'UTF8',newline='') as file:\n",
+        "  writer = csv.writer(file)\n",
+        "\n",
+        "  # write the header\n",
+        "  writer.writerow(header)\n",
+        "\n",
+        "  # write the data\n",
+        "  writer.writerows(data)\n"
       ],
       "metadata": {
         "id": "yT0aeP2zLGGG"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": []
     },
     {
